--- a/src/pages/[page].astro
+++ b/src/pages/[page].astro
@@ -1,18 +1,23 @@
 ---
 import AllLayout from '../layouts/AllLayout.astro';
 import InitializingGooglemaps from '../components/1_initializing_googlemaps.astro';
+import SettingMarkers from '../components/2_setting_markers.astro';
 
 export function getStaticPaths() {
-	return [{ params: { page: '1_initializing_googlemaps' }, props: { subtitle: '1_initializing Googlemaps' } }];
+	return [
+		{ params: { page: '1_initializing_googlemaps' }, props: { subtitle: '1. initializing Googlemaps' } },
+		{ params: { page: '2_setting_markers' }, props: { subtitle: '2. setting markers' } },
+	];
 }
 
 const { page } = Astro.params;
 const { subtitle } = Astro.props;
-
 const id = +page.split('_')[0];
 ---
 
 <AllLayout>
 	<h2 slot="subtitle">{subtitle}</h2>
 	{id === 1 && <InitializingGooglemaps />}
+	{id === 2 && <SettingMarkers />}
+	<script src="../script/2_setting_markers"></script>
 </AllLayout>
