--- a/src/components/1_initializing_googlemaps.astro
+++ b/src/components/1_initializing_googlemaps.astro
@@ -1,2 +1,2 @@
 <div id="map"></div>
-<script src="../script/1_initializing_googlemaps.js"></script>
+<!-- <script src="../script/1_initializing_googlemaps.js"></script> -->
