--- a/src/pages/[page].astro
+++ b/src/pages/[page].astro
@@ -2,11 +2,13 @@
 import AllLayout from '../layouts/AllLayout.astro';
 import InitializingGooglemaps from '../components/1_initializing_googlemaps.astro';
 import SettingMarkers from '../components/2_setting_markers.astro';
+import DrawingAPolyline from '../components/3_drawing_a_polyline.astro';
 
 export function getStaticPaths() {
 	return [
 		{ params: { page: '1_initializing_googlemaps' }, props: { subtitle: '1. initializing Googlemaps' } },
 		{ params: { page: '2_setting_markers' }, props: { subtitle: '2. setting markers' } },
+		{ params: { page: '3_drawing_a_polyline' }, props: { subtitle: '3. drawing a polyline' } },
 	];
 }
 
@@ -19,5 +21,6 @@ const id = +page.split('_')[0];
 	<h2 slot="subtitle">{subtitle}</h2>
 	{id === 1 && <InitializingGooglemaps />}
 	{id === 2 && <SettingMarkers />}
-	<script src="../script/2_setting_markers"></script>
+	{id === 3 && <DrawingAPolyline />}
+	<script src="../script/3_drawing_a_polyline"></script>
 </AllLayout>
