--- a/src/pages/[page].astro
+++ b/src/pages/[page].astro
@@ -8,6 +8,7 @@ import DrawingAnImage from '../components/5_drawing_an_image.astro';
 import MapEvents from '../components/6_map_events.astro';
 import DisplayingMapInfo from '../components/7_displaying_map_info.astro';
 import DisplayingUserLocation from '../components/8_displaying_user_location.astro';
+import DataLayer from '../components/9_data_layer.astro';
 
 export function getStaticPaths() {
 	return [
@@ -19,6 +20,7 @@ export function getStaticPaths() {
 		{ params: { page: '6_map_events' }, props: { subtitle: '6. map events' } },
 		{ params: { page: '7_displaying_map_info' }, props: { subtitle: '7. displaying map info' } },
 		{ params: { page: '8_displaying_user_location' }, props: { subtitle: '8. displaying user location' } },
+		{ params: { page: '9_data_layer' }, props: { subtitle: '9. data layer' } },
 	];
 }
 
@@ -37,5 +39,7 @@ const id = +page.split('_')[0];
 	{id === 6 && <MapEvents />}
 	{id === 7 && <DisplayingMapInfo />}
 	{id === 8 && <DisplayingUserLocation />}
-	<script src="../script/8_displaying_user_location"></script>
+	{id === 9 && <DataLayer />}
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+	<script src="../script/9_data_layer"></script>
 </AllLayout>
