--- a/src/pages/[page].astro
+++ b/src/pages/[page].astro
@@ -10,6 +10,7 @@ import DisplayingMapInfo from '../components/7_displaying_map_info.astro';
 import DisplayingUserLocation from '../components/8_displaying_user_location.astro';
 import DataLayer from '../components/9_data_layer.astro';
 import Kml from '../components/10_kml.astro';
+import Heatmap from '../components/11_heatmap.astro';
 
 export function getStaticPaths() {
 	return [
@@ -23,6 +24,7 @@ export function getStaticPaths() {
 		{ params: { page: '8_displaying_user_location' }, props: { subtitle: '8. displaying user location' } },
 		{ params: { page: '9_data_layer' }, props: { subtitle: '9. data layer' } },
 		{ params: { page: '10_kml' }, props: { subtitle: '10_kml' } },
+		{ params: { page: '11_heatmap' }, props: { subtitle: '11_heatmap' } },
 	];
 }
 
@@ -43,6 +45,7 @@ const id = +page.split('_')[0];
 	{id === 8 && <DisplayingUserLocation />}
 	{id === 9 && <DataLayer />}
 	{id === 10 && <Kml />}
+	{id === 11 && <Heatmap />}
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-	<script src="../script/10_kml"></script>
+	<script src="../script/11_heatmap"></script>
 </AllLayout>
