--- a/src/pages/[page].astro
+++ b/src/pages/[page].astro
@@ -11,6 +11,7 @@ import DisplayingUserLocation from '../components/8_displaying_user_location.ast
 import DataLayer from '../components/9_data_layer.astro';
 import Kml from '../components/10_kml.astro';
 import Heatmap from '../components/11_heatmap.astro';
+import TrafficLayer from '../components/12_traffic_layer.astro';
 
 export function getStaticPaths() {
 	return [
@@ -23,8 +24,9 @@ export function getStaticPaths() {
 		{ params: { page: '7_displaying_map_info' }, props: { subtitle: '7. displaying map info' } },
 		{ params: { page: '8_displaying_user_location' }, props: { subtitle: '8. displaying user location' } },
 		{ params: { page: '9_data_layer' }, props: { subtitle: '9. data layer' } },
-		{ params: { page: '10_kml' }, props: { subtitle: '10_kml' } },
-		{ params: { page: '11_heatmap' }, props: { subtitle: '11_heatmap' } },
+		{ params: { page: '10_kml' }, props: { subtitle: '10. kml' } },
+		{ params: { page: '11_heatmap' }, props: { subtitle: '11. heatmap' } },
+		{ params: { page: '12_traffic_layer' }, props: { subtitle: '12. traffic layer' } },
 	];
 }
 
@@ -46,6 +48,7 @@ const id = +page.split('_')[0];
 	{id === 9 && <DataLayer />}
 	{id === 10 && <Kml />}
 	{id === 11 && <Heatmap />}
+	{id === 12 && <TrafficLayer />}
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-	<script src="../script/11_heatmap"></script>
+	<script src="../script/12_traffic_layer"></script>
 </AllLayout>
